prevent bottom container from overlapping main text

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -636,7 +636,7 @@ div.toc li::marker {
 .bottom-container {
   position: fixed;
   bottom: 0;
-  left: 850px;
+  left: 75%;
   display: flex;
   flex-direction: column-reverse;
   /* Stacks items from bottom up */
